ui: fix alignment issue of github icon with main content

--- a/src/components/Bag/Bag.module.css
+++ b/src/components/Bag/Bag.module.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 4rem;
+    padding: 2rem;
     margin: 0 auto;
     width: 80vw;
 }
